[TAP] is T. Alexander Popiel, a former PennMUSH developer (aka Talek)
[3] refers to code by (or inspired by) TinyMUSH 3.0
[MUX] refers to code by (or inspired by) TinyMUX 2.x
[Rhost] refers to code by (or inspired by) RhostMUSH

==========================================================================

Version 1.8.3 patchlevel 11                     ??? ??, 2009
Commands:
  * @decompile now takes multiple attribute patterns after the /
    (@dec obj/attr attr2) [GM]
  * @channel/decompile now shows the dbref of the channel mogrifier,
    instead of its name. [SW]

Functions:
  * testlock(<boolexp>, <victim>) tests a lock without setting it.
    Suggested by Mercutio@M*U*S*H. [GM]
  * cwho() now takes an optional second argument, to control whether
    online, offline or all players are returned. Suggested by Mercutio,
    based on a patch by Ifrit. [MG]

Fixes:
 * fun_merge() was eating characters when ansi was present. Reported
   by Nammyung. Fixed. [GM]
 * Windows compile fixes.
 * page/port didn't evaluate its arguments properly. Reported
   by adkins@drigon.com. [SW]
 * randword() with a single element list wasn't dealing correctly
   with extra spaces. Reported by Widdis. [SW]
 * @listen/^-listens should now be triggered with the object being
   spoofed as %#, not the object doing the spoofing, when @message/spoof
   (and @pemit/spoof, etc) are used. Reported by Mercutio@M*U*S*H. [MG]
 * Fixed some minor type-related warnings when compiling on cygwin. [MG]
   
 Minor changes:
 * @listen/^-listens now carry over ANSI. Requested by Mercutio. [MG]

Tools:
 * New script in utils/ for searching change logs: grep-cl.pl [SW]

Version 1.8.3 patchlevel 10                     Aug 24, 2009

Major changes:
 * Switched project management (Bug tracking, revision control, etc.)
   to Google Code. See http://code.google.com/p/pennmush

Minor changes:
 * @search and lsearch() now only charge 100 pennies if an evaluating