@@ -441,7 +441,8 @@ dump_complete GAME: Save complete.
 # Text files shown on connection, as message of the day,
 # as wizard message of the day, on quit, to newly created players,
 # when logins are disabled, when player creation is disabled,
-# and when a guest logs in.
+# and when a guest logs in. These must either be the path to
+# a text file, or a #dbref/attrname to be evaluated and shown.
 connect_file txt/connect.txt
 motd_file txt/motd.txt
 wizmotd_file txt/wizmotd.txt
